Add more tests for importing and exporting